# LLMCodeGeneration

./: .gitignore  .nexusrules  .vscode-test.mjs  .vscodeignore  CHANGELOG.md  Functional Requirement.txt  LICENSE  README.md  jest.config.js  nexuscode-roadmap.md  package-lock.json  package.json  package.nls.json  tsconfig.json  tsconfig.test.json  validate.js
.nexus/audit/: audit-2026-05-06.jsonl
.nexus/banking-compliance-zh/: README.md
.nexus/django/: README.md
.nexus/typescript-monorepo/: README.md
fixtures/: HOW-TO-BASELINE.md  README.md
fixtures/baselines/: scorecard-2026-05-02T15-36-49-656Z.json  scorecard-2026-05-02T15-36-49-656Z.md  scorecard-2026-05-02T15-52-16-704Z.json  (+7 more)
scaffolds/python-fastapi/files/: .gitignore  README.md  pyproject.toml
scaffolds/python-fastapi/files/src/my_api/: main.py
scaffolds/python-fastapi/files/src/my_api/routers/: __init__.py
scripts/: validate-manifest.js
skills/: .nexusrules
src/: AILensProvider.ts  ChatViewProvider.ts  EditorManager.ts  LLMService.ts  SidebarProvider.ts  agentTools.ts  cli.ts  container.ts  diffProvider.ts  extension.ts  llmService.ts  logger.ts  metaContextManager.ts  projectContext.ts  provenanceTracker.ts  skillsManager.ts  terminalInterceptor.ts  terminalManager.ts  workspaceManager.ts
src/agents/: CoderAgent.ts  (+17 more)
src/scaffold/python-fastapi/files/: .gitignore  README.md  pyproject.toml
src/scaffold/python-fastapi/files/src/my_api/: __init__.py
webview-ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.js.map  vite.config.ts  vitest.config.ts
(+316 files in other folders)
